download wa as part of image build, simplify build, add proper tag to readme